globus-connect-server (4.0.58-1+gt6.@distro@) @distro@; urgency=low

  * Set text=True when communicating with subprocesses in myproxy-oauth setup

 -- Globus Toolkit <support@globus.org>  Wed, 05 Jun 2019 14:55:31 -0400

globus-connect-server (4.0.57-1+gt6.@distro@) @distro@; urgency=low

  * Match CILogon IdP based on Organization name or Display name
  * Python 3 fix on version string in version_id

 -- Globus Toolkit <support@globus.org>  Mon, 20 May 2019 08:09:17 -0400

globus-connect-server (4.0.56-1+gt6.@distro@) @distro@; urgency=low

  * Better error parsing for EC2 checks (#21)
  * Fix python3 conversion issue reading signing policy (#22)

 -- Globus Toolkit <support@globus.org>  Mon, 20 May 2019 08:09:17 -0400

globus-connect-server (4.0.55-1+gt6.@distro@) @distro@; urgency=low

  * Update to new Globus SDK, repackage using python3

 -- Globus Toolkit <support@globus.org>  Fri, 10 May 2019 19:42:08 -0400

globus-connect-server (4.0.51-1+gt6.@distro@) @distro@; urgency=low

  * Fix for CILogon IdPs that do not support full R&S attributes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Dec 2018 17:01:43 -0500

globus-connect-server (4.0.50-1+gt6.@distro@) @distro@; urgency=low

  * Support non-InCommon CILogon IdPs
  * Update CILogon IdP list

 -- Globus Toolkit <support@globus.org>  Tue, 20 Nov 2018 10:11:31 -0500

globus-connect-server (4.0.49-1+gt6.@distro@) @distro@; urgency=low
  
  * Add retries to http downloads for version and ec2 checking.
  * Fix ec2 checks not failing in Azure.

 -- Globus Toolkit <support@globus.org>  Mon, 7 May 2018 11:52:12 -0500

globus-connect-server (4.0.48-1+gt6.@distro@) @distro@; urgency=low

  * Update CILogon IdP list

 -- Globus Toolkit <support@globus.org>  Mon, 9 Apr 2018 14:11:33 -0500

globus-connect-server (4.0.46-1+gt6.@distro@) @distro@; urgency=low

  * Fix DN parsing for openssl 1.1.x

 -- Globus Toolkit <support@globus.org>  Mon, 12 Dec 2017 12:00:41 -0500
