@@ -166,7 +166,8 @@ class Web(gcmu.GCMU):
             args.append("-n")
             args.append(nexus_host)
         self.logger.debug("executing " + " ".join(args))
-        setup = Popen(args, text=True, stdin=PIPE, stdout=PIPE, stderr=PIPE)
+        setup = Popen(args, universal_newlines=True, stdin=PIPE, stdout=PIPE,
+                      stderr=PIPE)
         (out, err) = setup.communicate(self.password)
         if out != "":
             self.logger.debug(out)
@@ -179,7 +180,7 @@ class Web(gcmu.GCMU):
         if self.dist_type == 'deb':
             if not os.path.exists("/etc/apache2/mods-enabled/mod_ssl.load"):
                 enabler = Popen(["/usr/sbin/a2enmod","ssl"],
-                        text=True,
+                        universal_newlines=True,
                         stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = enabler.communicate()
                 if out != "":
@@ -190,7 +191,8 @@ class Web(gcmu.GCMU):
                 touched.close()
         elif self.dist_type == 'suse':
             modlist = Popen(["/sbin/yast2","http-server", "modules", "list"],
-                    text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                    universal_newlines=True,
+                    stdin=None, stdout=PIPE, stderr=PIPE)
             (out, err) = modlist.communicate()
             ssl_already_enabled = False
             for l in err.split("\n"):
@@ -202,7 +204,7 @@ class Web(gcmu.GCMU):
             if not ssl_already_enabled:
                 enabler = Popen(["/sbin/yast2","http-server", "modules",
                         "enable=ssl"],
-                        text=True,
+                        universal_newlines=True,
                         stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = enabler.communicate()
                 if out != "":
@@ -224,7 +226,7 @@ class Web(gcmu.GCMU):
             if not(os.path.exists("/etc/apache2/mods-enabled/mod_wsgi.load") \
                     or os.path.exists("/etc/apache2/mods-enabled/wsgi.load")):
                 enabler = Popen(["/usr/sbin/a2enmod","wsgi"],
-                        text=True,
+                        universal_newlines=True,
                         stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = enabler.communicate()
                 if out != "":
@@ -237,7 +239,7 @@ class Web(gcmu.GCMU):
                     os.path.exists(
                     "/etc/apache2/conf-enabled/myproxy-oauth.conf"):
                 enabler = Popen(["/usr/sbin/a2enconf", "myproxy-oauth"],
-                        text=True,
+                        universal_newlines=True,
                         stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = enabler.communicate()
                 if out != "":
@@ -254,7 +256,7 @@ class Web(gcmu.GCMU):
         if self.dist_type == 'deb':
             if os.path.exists(_enabled_mod_ssl):
                 disabler = Popen(["/usr/sbin/a2dismod","ssl"],
-                        text=True,
+                        universal_newlines=True,
                         stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = disabler.communicate()
                 if out != "":
@@ -266,7 +268,8 @@ class Web(gcmu.GCMU):
             if os.path.exists(_enabled_mod_ssl):
                 disabler =  Popen(["/sbin/yast2","http-server", "module",
                         "disable=ssl"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = disabler.communicate()
                 if out != "":
                     self.logger.debug(out)
@@ -283,7 +286,8 @@ class Web(gcmu.GCMU):
         if self.dist_type == 'deb':
             if os.path.exists(_enabled_mod_wsgi):
                 disabler = Popen(["/usr/sbin/a2dismod","wsgi"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = disabler.communicate()
                 if out != "":
                     self.logger.debug(out)
@@ -292,7 +296,8 @@ class Web(gcmu.GCMU):
                 os.remove(_enabled_mod_wsgi)
             if os.path.exists(_enabled_myproxy_oauth_conf):
                 disabler = Popen(["/usr/sbin/a2disconf", "myproxy-oauth"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = disabler.communicate()
                 if out != "":
                     self.logger.debug(out)
@@ -305,7 +310,8 @@ class Web(gcmu.GCMU):
         if self.dist_type == 'deb':
             if not os.path.exists("/etc/apache2/sites-enabled/default-ssl"):
                 enabler = Popen(["/usr/sbin/a2ensite","default-ssl"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (stdout, stderr) = enabler.communicate()
                 touched = open(_enabled_default_ssl_site, "w")
                 touched.close()
@@ -328,7 +334,8 @@ class Web(gcmu.GCMU):
 
             if not os.path.exists(_suse_ssl_cert):
                 ssl_create = Popen(["/usr/bin/gensslcert"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (out, err) = ssl_create.communicate()
                 if out != "":
                     self.logger.debug(out)
@@ -342,7 +349,8 @@ class Web(gcmu.GCMU):
         if self.dist_type == 'deb':
             if os.path.exists(_enabled_default_ssl_site):
                 disabler = Popen(["/usr/sbin/a2dissite","default-ssl"],
-                        text=True, stdin=None, stdout=PIPE, stderr=PIPE)
+                        universal_newlines=True,
+                        stdin=None, stdout=PIPE, stderr=PIPE)
                 (stdout, stderr) = disabler.communicate()
                 os.remove(_enabled_default_ssl_site)
         elif self.dist_type == 'suse':
